--- a/deepsite_aemet_municipios.html
+++ b/deepsite_aemet_municipios.html
@@ -87,7 +87,7 @@
           <div class="row g-3 mb-3">
             <div class="col-md-6">
               <label for="provincia" class="form-label">Provincia</label>
-              <select id="provincia" class="form-select">
+              <select id="provincia" class="form-select form-select-sm">
                 <option value="">Selecciona una provincia</option>
                 <option value="01">Álava</option>
                 <option value="02">Albacete</option>
@@ -312,7 +312,7 @@
     <div class="toast-container position-fixed bottom-0 end-0 p-3">
       <div
         id="liveToast"
-        class="toast"
+        class="toast text-bg-danger"
         data-bs-config='{"delay":4000}'
         role="alert"
         aria-live="assertive"
